# zkclear-core

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README_DOCKER.md  README_LOCAL.md  docker-compose.local.yml  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  main.rs  routes.rs  types.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/prover/: CLEANUP_REPORT.md  Cargo.toml
crates/prover/src/: air.rs  circuit.rs  error.rs  keys.rs  lib.rs  merkle.rs  nullifier.rs  prover.rs  snark.rs  stark.rs  stark_proof.rs
crates/prover/src/tests/: integration_tests.rs  mod.rs  performance_tests.rs  snark_tests.rs  stark_tests.rs  validation_tests.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: config.rs  lib.rs  validation.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/stf/src/: lib.rs  test.rs
crates/storage/: Cargo.toml
crates/storage/src/: in_memory.rs  lib.rs  rocksdb_impl.rs  storage_trait.rs
crates/types/: Cargo.toml
crates/types/src/: constants.rs  lib.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: chain_watcher.rs  config.rs  event_processor.rs  lib.rs
crates/watcher/tests/: integration_test.rs
data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000017
