[package]
name = "zkclear-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkclear-api"
path = "src/main.rs"

[dependencies]
zkclear-types = { path = "../types" }
zkclear-state = { path = "../state" }
zkclear-sequencer = { path = "../sequencer" }
zkclear-storage = { path = "../storage" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
bincode = "1.3"

