[package]
name = "zkclear-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
zkclear-types = { path = "../types" }
zkclear-state = { path = "../state" }
zkclear-stf = { path = "../stf" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
sha2 = "0.10"
sha3 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# ZK Proof libraries
# Winterfell for STARK proofs (reliable, well-maintained, available on crates.io)
winterfell = { version = "0.13", optional = true, features = ["std", "concurrent"] }
# Arkworks Groth16 for SNARK proofs (wrapping STARK proofs for on-chain verification)
# Arkworks is a popular, stable library that works on stable Rust
ark-groth16 = { version = "0.5", optional = true }
ark-bn254 = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-std = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-snark = { version = "0.5", optional = true }
ark-r1cs-std = { version = "0.5", optional = true }
ark-relations = { version = "0.5", optional = true }

[features]
default = []
winterfell = ["dep:winterfell"]
arkworks = ["dep:ark-groth16", "dep:ark-bn254", "dep:ark-ec", "dep:ark-ff", "dep:ark-std", "dep:ark-r1cs-std", "dep:ark-relations", "dep:ark-serialize", "dep:ark-snark"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

